# spacecreator

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.22  CMakeLists.txt.user.4.9-pre1  LICENSE  Makefile  README.md  VERSION  _clang-format  bashrc-aliases  build-and-generate-appimage.sh  changelog.txt  depend_application.pri  depend_asn1library.pri  depend_msclibrary.pri  depend_mscwidgets.pri  depend_qobjectlistmodel.pri  env.5.12.12.sh  env.6.3.1.sh  esa.pri  esa.pro  install-requirements.sh  lgpl.lic.qtc  link_antlr_rt.pri  q  quickstart.md  scversion.h  taste3.pro
asn1scc/: CMakeLists.txt
imports/iveditor/TASTEeditor/: CMakeLists.txt  TASTEeditor.pro  allheaders4qdoc.h  main.cpp
src/applications/: CMakeLists.txt
src/applications/TASTEeditor/: CMakeLists.txt  main.cpp
src/applications/aadlconverter/: CMakeLists.txt  main.cpp
src/applications/asn1parser/: CMakeLists.txt  main.cpp
src/applications/crashreporter/: CMakeLists.txt  main.cpp
src/applications/dvconverter/: CMakeLists.txt  main.cpp
src/applications/dveditor/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/applications/e2eimagesaver/: CMakeLists.txt  main.cpp
src/applications/ivconverter/: CMakeLists.txt  main.cpp
src/applications/iveditor/: CMakeLists.txt  ivproject.cpp  ivproject.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/applications/ivmerger/: CMakeLists.txt  main.cpp
src/applications/ivstreaming/: CMakeLists.txt  ivstreamingwindow.cpp  ivstreamingwindow.h  ivstreamingwindow.ui  main.cpp
src/applications/mscconverter/: CMakeLists.txt  main.cpp
src/applications/msceditor/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mscproject.cpp  mscproject.h
src/applications/mscstreaming/: CMakeLists.txt  main.cpp  streamingwindow.cpp  streamingwindow.h  streamingwindow.ui
src/applications/msctosdlconverter/: CMakeLists.txt  main.cpp
src/applications/sedsconverter/: CMakeLists.txt  main.cpp  sedsconverter.cpp  sedsconverter.h  sedsconvertercli.cpp  sedsconvertercli.h
src/applications/spinerrorparser/: CMakeLists.txt  main.cpp
src/applications/tmc/: CMakeLists.txt  executor.cpp  executor.h  main.cpp
src/applications/tmcivoptimizer/: CMakeLists.txt  main.cpp
src/applications/trailgen/: CMakeLists.txt  executor.cpp  executor.h  main.cpp
src/applications/xmlvalidator/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/aadl/: CMakeLists.txt  aadlcomment.cpp  aadlcomment.h  aadlcommonprops.cpp  aadlcommonprops.h  aadlconnection.cpp  aadlconnection.h  aadlconnectionchain.cpp  aadlconnectionchain.h  aadlconnectiongroup.cpp  aadlconnectiongroup.h  aadlfunction.cpp  aadlfunction.h  aadlfunctiontype.cpp  aadlfunctiontype.h  aadliface.cpp  aadliface.h  aadlifacegroup.cpp  aadlifacegroup.h  aadlinterfacechain.cpp  aadlinterfacechain.h  aadllibrary.cpp  aadllibrary.h  aadlmodel.cpp  aadlmodel.h  aadlnamevalidator.cpp  aadlnamevalidator.h  aadlobject.cpp  aadlobject.h  aadlobjectcomment.cpp  aadlobjectcomment.h  aadlobjectconnection.cpp  aadlobjectconnection.h  aadlobjectconnectiongroup.cpp  aadlobjectconnectiongroup.h  aadlobjectfunction.cpp  aadlobjectfunction.h  aadlobjectfunctiontype.cpp  aadlobjectfunctiontype.h  aadlobjectiface.cpp  (+48 more)
src/libs/application/: CMakeLists.txt  documenttreeview.cpp  mainmodel.cpp  mainmodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mscplugin.cpp  mscplugin.h  remotecontrolhandler.h  remotecontrolwebserver.cpp
src/libs/asn1editor/: CMakeLists.txt  asn1const.h  asn1editor.cpp  asn1editor.h  asn1editor.ui  asn1editorconst.h  asn1fileview.cpp  asn1fileview.h  asn1itemdelegate.cpp  asn1itemdelegate.h  asn1itemmodel.cpp  asn1itemmodel.h  asn1treeview.cpp  asn1treeview.h  asn1valueparser.cpp  asn1valueparser.h  asn1xmlparser.cpp  asn1xmlparser.h
src/libs/asn1library/: CMakeLists.txt  asn1const.h  asn1library.cpp  asn1library.h  asn1modelstorage.cpp  asn1modelstorage.h  asn1reader.cpp  asn1reader.h  asn1resources.qrc  asn1scc.cpp  asn1scc.h  asn1systemchecks.cpp  asn1systemchecks.h  asn1valueparser.cpp  asn1valueparser.h  asn1xmlparser.cpp  asn1xmlparser.h  astxmlconstraintparser.h  astxmlparser.cpp  astxmlparser.h  errormessageparser.cpp  errormessageparser.h
src/libs/common/: CMakeLists.txt  messagestrings.h
src/libs/conversion/: CMakeLists.txt
src/libs/csv/: CMakeLists.txt
src/libs/deploy/: CMakeLists.txt  deploybinding.h  deploylink.cpp  deploylink.h  deploymentbinding.cpp  deploymentbinding.h  deploymentbus.cpp  deploymentbus.h  deploymentdevice.cpp  deploymentdevice.h  deploymentlink.cpp  deploymentlink.h  deploymentnode.cpp  deploymentnode.h  deploymentobject.cpp  deploymentobject.h  deploymentobjectsmodel.cpp  deploymentobjectsmodel.h  deploymentpartition.cpp  deploymentpartition.h  deploymentprocessor.cpp  deploymentprocessor.h  deploynode.cpp  deploynode.h  deployobject.h  deployobjectsmodel.h  deploypartition.cpp  deploypartition.h  deployprocessor.cpp  prop.cpp  prop.h
src/libs/dvcore/: CMakeLists.txt  abstractsystemchecks.cpp  abstractsystemchecks.h  connectioncreationvalidator.cpp  connectioncreationvalidator.h  connectionvalidator.cpp  connectionvalidator.h  deploybinding.cpp  deploybus.cpp  deploybus.h  deploydevice.cpp  deploydevice.h  deployobject.cpp  deployobjectsmodel.cpp  deployprocessor.h  dvbinding.cpp  dvbinding.h  dvboard.cpp  dvboard.h  dvboardreader.cpp  dvboardreader.h  dvbus.cpp  dvbus.h  dvcommonprops.cpp  dvcommonprops.h  dvconnection.cpp  dvconnection.h  dvdevice.cpp  dvdevice.h  dvfunction.cpp  dvfunction.h  dvhwlibraryreader.cpp  dvhwlibraryreader.h  dvinterface.cpp  dvinterface.h  dvlibrary.cpp  dvlibrary.h  dvlink.cpp  dvlink.h  dvmessage.cpp  (+31 more)
src/libs/ivcore/: CMakeLists.txt  ivcomment.h  (+58 more)
src/qtcreator/: CMakeLists.txt
tests/commontestlib/: CMakeLists.txt  graphicsitemcompare.cpp  graphicsitemcompare.h  syntheticinteraction.cpp  syntheticinteraction.h
tests/unittests/: CMakeLists.txt  testutils.h  unittests.pro
wizards/: CMakeLists.txt
wizards/msc/: empty.msc
(+10502 files in other folders)
