add_subdirectory(aadlconverter)
add_subdirectory(dvconverter)
add_subdirectory(dveditor)
add_subdirectory(iveditor)
add_subdirectory(mscconverter)
add_subdirectory(msceditor)
add_subdirectory(msctosdlconverter)
add_subdirectory(mscstreaming)
add_subdirectory(sedsconverter)
add_subdirectory(spinerrorparser)
add_subdirectory(xmlvalidator)
add_subdirectory(tmc)
add_subdirectory(tmcivoptimizer)
add_subdirectory(trailgen)
