add_subdirectory(ivcore)
add_subdirectory(dvcore)
add_subdirectory(asn1editor)
add_subdirectory(asn1library)
add_subdirectory(common)
add_subdirectory(conversion)
add_subdirectory(libdveditor)
add_subdirectory(libiveditor)
add_subdirectory(libmsceditor)
add_subdirectory(msccore)
add_subdirectory(seds)
add_subdirectory(sdl)
add_subdirectory(shared)
add_subdirectory(spacecreatorsystem)

if (${QTC_FOUND} AND QTC_VERSION EQUAL 48)
    add_subdirectory(asn1plugin)
endif()
