add_subdirectory(asn1editor)
add_subdirectory(asn1library)
add_subdirectory(common)
add_subdirectory(conversion)
add_subdirectory(csv)
add_subdirectory(dvcore)
add_subdirectory(ivcore)
add_subdirectory(libdveditor)
add_subdirectory(libiveditor)
add_subdirectory(libmsceditor)
add_subdirectory(msccore)
add_subdirectory(promela)
add_subdirectory(reporting)
add_subdirectory(tmc)
add_subdirectory(sdl)
add_subdirectory(seds)
add_subdirectory(simulink)
add_subdirectory(shared)
add_subdirectory(spacecreatorsystem)

if(${QTC_FOUND})
    add_subdirectory(testgenerator)
endif()

if (${QTC_FOUND} AND ${BUILD_ASN1PLUGIN})
    add_subdirectory(asn1plugin)
endif()
