set(APP_NAME IVeditor)

add_executable(${APP_NAME})

target_sources(${APP_NAME} PRIVATE
    app/commandlineparser.cpp
    app/commandlineparser.h
    app/commandsstack.cpp
    app/commandsstack.h
    app/context/action/action.cpp
    app/context/action/action.h
    app/context/action/actionsmanager.cpp
    app/context/action/actionsmanager.h
    app/context/action/attrhandler.cpp
    app/context/action/attrhandler.h
    app/context/action/condition.cpp
    app/context/action/condition.h
    app/context/action/editor/actionsmodel.cpp
    app/context/action/editor/actionsmodel.h
    app/context/action/editor/attributesmodel.cpp
    app/context/action/editor/attributesmodel.h
    app/context/action/editor/conditiondialog.cpp
    app/context/action/editor/conditiondialog.h
    app/context/action/editor/conditiondialog.ui
    app/context/action/editor/conditionsmodel.cpp
    app/context/action/editor/conditionsmodel.h
    app/context/action/editor/dynactioneditor.cpp
    app/context/action/editor/dynactioneditor.h
    app/context/action/editor/dynactioneditor.ui
    app/context/action/extprocmonitor.cpp
    app/context/action/extprocmonitor.h
    app/aadltabdocument.cpp
    app/aadltabdocument.h
    app/mainwindow.cpp
    app/mainwindow.h
    app/mainwindow.ui
    app/tabdocumentfactory.cpp
    app/tabdocumentfactory.h
    app/xmldocexporter.cpp
    app/xmldocexporter.h
    app/zoomcontroller.cpp
    app/zoomcontroller.h
    baseitems/common/abstractinteractiveobject.h
    baseitems/common/drawrectinfo.cpp
    baseitems/common/drawrectinfo.h
    baseitems/common/highlightrectitem.cpp
    baseitems/common/highlightrectitem.h
    baseitems/common/utils.cpp
    baseitems/common/utils.h
    baseitems/graphicsview.cpp
    baseitems/graphicsview.h
    baseitems/grippoint.cpp
    baseitems/grippoint.h
    baseitems/grippointshandler.cpp
    baseitems/grippointshandler.h
    baseitems/interactiveobject.cpp
    baseitems/interactiveobject.h
    baseitems/textgraphicsitem.cpp
    baseitems/textgraphicsitem.h
    dummy/dummytabdocument.cpp
    dummy/dummytabdocument.h
    logging/logcategory.cpp
    logging/logcategory.h
    logging/loghandler.cpp
    logging/loghandler.h
    main.cpp
    settings/appoptions.cpp
    settings/appoptions.h
    tab_concurrency/concurrencytabdocument.cpp
    tab_concurrency/concurrencytabdocument.h
    tab_data/datatabdocument.cpp
    tab_data/datatabdocument.h
    tab_deployment/deploymenttabdocument.cpp
    tab_deployment/deploymenttabdocument.h
    tab_interface/aadlcommentgraphicsitem.cpp
    tab_interface/aadlcommentgraphicsitem.h
    tab_interface/aadlconnectiongraphicsitem.cpp
    tab_interface/aadlconnectiongraphicsitem.h
    tab_interface/aadlfunctiongraphicsitem.cpp
    tab_interface/aadlfunctiongraphicsitem.h
    tab_interface/aadlfunctionnamegraphicsitem.cpp
    tab_interface/aadlfunctionnamegraphicsitem.h
    tab_interface/aadlfunctiontypegraphicsitem.cpp
    tab_interface/aadlfunctiontypegraphicsitem.h
    tab_interface/aadlinterfacegraphicsitem.cpp
    tab_interface/aadlinterfacegraphicsitem.h
    tab_interface/aadlrectgraphicsitem.cpp
    tab_interface/aadlrectgraphicsitem.h
    tab_interface/colors/colorhandlereditor.cpp
    tab_interface/colors/colorhandlereditor.h
    tab_interface/colors/colorhandlereditor.ui
    tab_interface/colors/colormanager.cpp
    tab_interface/colors/colormanager.h
    tab_interface/colors/colormanagerdialog.cpp
    tab_interface/colors/colormanagerdialog.h
    tab_interface/colors/colormanagerdialog.ui
    tab_interface/colors/colorselectorbutton.cpp
    tab_interface/colors/colorselectorbutton.h
    tab_interface/commands/cmdcommentitemcreate.cpp
    tab_interface/commands/cmdcommentitemcreate.h
    tab_interface/commands/cmdconnectionitemcreate.cpp
    tab_interface/commands/cmdconnectionitemcreate.h
    tab_interface/commands/cmdcontextparameterchange.cpp
    tab_interface/commands/cmdcontextparameterchange.h
    tab_interface/commands/cmdcontextparametercreate.cpp
    tab_interface/commands/cmdcontextparametercreate.h
    tab_interface/commands/cmdcontextparameterremove.cpp
    tab_interface/commands/cmdcontextparameterremove.h
    tab_interface/commands/cmdentityattributechange.cpp
    tab_interface/commands/cmdentityattributechange.h
    tab_interface/commands/cmdentityautolayout.cpp
    tab_interface/commands/cmdentityautolayout.h
    tab_interface/commands/cmdentitygeometrychange.cpp
    tab_interface/commands/cmdentitygeometrychange.h
    tab_interface/commands/cmdentitypropertychange.cpp
    tab_interface/commands/cmdentitypropertychange.h
    tab_interface/commands/cmdentitypropertycreate.cpp
    tab_interface/commands/cmdentitypropertycreate.h
    tab_interface/commands/cmdentitypropertyremove.cpp
    tab_interface/commands/cmdentitypropertyremove.h
    tab_interface/commands/cmdentitypropertyrename.cpp
    tab_interface/commands/cmdentitypropertyrename.h
    tab_interface/commands/cmdentityremove.cpp
    tab_interface/commands/cmdentityremove.h
    tab_interface/commands/cmdfunctionitemcreate.cpp
    tab_interface/commands/cmdfunctionitemcreate.h
    tab_interface/commands/cmdfunctiontypeitemcreate.cpp
    tab_interface/commands/cmdfunctiontypeitemcreate.h
    tab_interface/commands/cmdifaceattrchange.cpp
    tab_interface/commands/cmdifaceattrchange.h
    tab_interface/commands/cmdifacedatachangebase.cpp
    tab_interface/commands/cmdifacedatachangebase.h
    tab_interface/commands/cmdifaceparambase.cpp
    tab_interface/commands/cmdifaceparambase.h
    tab_interface/commands/cmdifaceparamchange.cpp
    tab_interface/commands/cmdifaceparamchange.h
    tab_interface/commands/cmdifaceparamcreate.cpp
    tab_interface/commands/cmdifaceparamcreate.h
    tab_interface/commands/cmdifaceparamremove.cpp
    tab_interface/commands/cmdifaceparamremove.h
    tab_interface/commands/cmdinterfaceitemcreate.cpp
    tab_interface/commands/cmdinterfaceitemcreate.h
    tab_interface/commands/cmdrequiredifacepropertychange.cpp
    tab_interface/commands/cmdrequiredifacepropertychange.h
    tab_interface/commands/cmdrootentitychange.cpp
    tab_interface/commands/cmdrootentitychange.h
    tab_interface/commands/commandids.h
    tab_interface/commands/commandsfactory.cpp
    tab_interface/commands/commandsfactory.h
    tab_interface/commenttextdialog.cpp
    tab_interface/commenttextdialog.h
    tab_interface/commenttextdialog.ui
    tab_interface/creatortool.cpp
    tab_interface/creatortool.h
    tab_interface/graphicsitemhelpers.cpp
    tab_interface/graphicsitemhelpers.h
    tab_interface/interfacetabdocument.cpp
    tab_interface/interfacetabdocument.h
    tab_interface/interfacetabgraphicsscene.cpp
    tab_interface/interfacetabgraphicsscene.h
    tab_interface/properties/adddynamicpropertydialog.h
    tab_interface/properties/adddynamicpropertydialog.ui
    tab_interface/properties/adddynamicropertydialog.cpp
    tab_interface/properties/contextparametersmodel.cpp
    tab_interface/properties/contextparametersmodel.h
    tab_interface/properties/delegates/comboboxdelegate.cpp
    tab_interface/properties/delegates/comboboxdelegate.h
    tab_interface/properties/delegates/functionattrdelegate.cpp
    tab_interface/properties/delegates/functionattrdelegate.h
    tab_interface/properties/delegates/interfaceattrdelegate.cpp
    tab_interface/properties/delegates/interfaceattrdelegate.h
    tab_interface/properties/delegates/propertytypedelegate.cpp
    tab_interface/properties/delegates/propertytypedelegate.h
    tab_interface/properties/dynamicproperty.cpp
    tab_interface/properties/dynamicproperty.h
    tab_interface/properties/dynamicpropertyconfig.cpp
    tab_interface/properties/dynamicpropertyconfig.h
    tab_interface/properties/dynamicpropertymanager.cpp
    tab_interface/properties/dynamicpropertymanager.h
    tab_interface/properties/dynamicpropertymanager.ui
    tab_interface/properties/ifaceparametersmodel.cpp
    tab_interface/properties/ifaceparametersmodel.h
    tab_interface/properties/propertiesdialog.cpp
    tab_interface/properties/propertiesdialog.h
    tab_interface/properties/propertiesdialog.ui
    tab_interface/properties/propertieslistmodel.cpp
    tab_interface/properties/propertieslistmodel.h
    tab_interface/properties/propertiesmodelbase.cpp
    tab_interface/properties/propertiesmodelbase.h
    tab_interface/properties/propertiesviewbase.cpp
    tab_interface/properties/propertiesviewbase.h
    tab_interface/properties/propertiesviewbase.ui
    tab_msc/msctabdocument.cpp
    tab_msc/msctabdocument.h
    templating/abstractexportableobject.h
    templating/exportableaadlconnection.cpp
    templating/exportableaadlconnection.h
    templating/exportableaadlfunction.cpp
    templating/exportableaadlfunction.h
    templating/exportableaadliface.cpp
    templating/exportableaadliface.h
    templating/exportableaadlobject.cpp
    templating/exportableaadlobject.h
    templating/exportableproperty.h
    templating/stringtemplate.cpp
    templating/stringtemplate.h
    templating/templateeditor.cpp
    templating/templateeditor.h
    templating/templatehighlighter.cpp
    templating/templatehighlighter.h
    templating/templatesyntaxhelpdialog.cpp
    templating/templatesyntaxhelpdialog.h
    templating/xmlhighlighter.cpp
    templating/xmlhighlighter.h
    resources.qrc
    tab_interface/tab_interface_resources.qrc
    templating/template_syntax_help.qrc
)


target_link_libraries(${APP_NAME} PUBLIC
    aadl
    shared
    utils
    Qt5::Concurrent
    Qt5::Network
    Qt5::Svg
    Qt5::Widgets
    Grantlee5::Templates
)

target_include_directories(${APP_NAME} PRIVATE
    .
    app
    baseitems
    document
    dummy
    logging
    reports
    settings
    tab_aadl
    tab_concurrency
    tab_data
    tab_deployment
    tab_interface
    tab_msc
    templating
    util
)

target_compile_definitions(${APP_NAME} PUBLIC QT_MESSAGELOGCONTEXT)

if (WIN32)
  if(CMAKE_BUILD_TYPE STREQUAL "Release")
    # hide the console window for release builds
    set_property(TARGET ${APP_NAME} PROPERTY WIN32_EXECUTABLE true)
  endif()
endif()
